stage the work